# habaz

./: .gitignore  .project  Habaz.cabal  Habaz.hs  README.markdown  Setup.hs  Test.hs  index.html
doc/: SessionState.graphml
src/: Backgammon.hs  CLIP.hs  Controller.hs  Dispatch.hs  DomainTypes.hs  Events.hs  FIBSClient.hs  FIBSConnector.hs  Main.hs  Model.hs  Scratch.hs  Session.hs  TestUtils.hs  Transitions.hs  View.hs
src/FIBSClient/: Commands.hs  Messages.hs
src/Graphics/UI/WX/: Async.hs
src/View/: Board.hs  InvitationList.hs  MatchWindow.hs  PlayerList.hs
test/: Backgammon.hs  CLIP.hs  FIBSClient.hs  FIBSClientTests.hs  ModelTests.hs  Test.hs
