Name:           Habaz
Version:        0.1.0
Cabal-Version:  >= 1.2
License:        MIT
Author:         Maciek Makowski
Synopsis:       A FIBS client
Build-Type:     Simple

Executable habaz
  Build-Depends:  array == 0.3.*,
                  base == 4.3.*,
                  containers == 0.4.*,
                  HUnit == 1.2.*,
                  network == 2.3.*,
                  old-locale == 1.0.*,
                  QuickCheck == 1.2.*,
                  random == 1.0.*,
                  stm == 2.2.*,
                  time == 1.2.*,
                  wx == 0.12.*
  Main-Is:        Main.hs
  Hs-Source-Dirs: src
