name:           Habaz
version:        0.1.0
cabal-version:  >= 1.9.2
license:        MIT
author:         Maciek Makowski
synopsis:       A FIBS client
build-type:     Simple

executable habaz
  hs-source-dirs: src
  main-is:        Main.hs
  build-depends:  array == 0.3.*,
                  base == 4.3.*,
                  containers == 0.4.*,
                  network == 2.3.*,
                  old-locale == 1.0.*,
                  stm == 2.2.*,
                  time == 1.2.*,
                  wx == 0.12.*

test-suite all-tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: .,src,test
  main-is:    	  Test.hs
  build-depends:  base == 4.3.*,
                  HUnit == 1.2.*,
                  old-locale == 1.0.*,
                  QuickCheck == 2.4.*,
                  random == 1.0.*,
                  test-framework == 0.4.*,
                  test-framework-hunit == 0.2.*,
                  test-framework-quickcheck2 == 0.2.*,
                  time == 1.2.*
