name:           Habaz
version:        0.1.0
cabal-version:  >= 1.9.2
license:        MIT
author:         Maciek Makowski
synopsis:       A FIBS client
build-type:     Simple

executable habaz
  hs-source-dirs: src
  main-is:        Main.hs
  build-depends:  
                  array >= 0.4,
                  base >= 4.5,
                  containers >= 0.4,
                  hslogger >= 1.1,
                  network >= 2.3,
                  old-locale >= 1.0,
                  regex-tdfa >= 1.1,
                  stm >= 2.2,
                  time >= 1.4,
                  wx >= 0.12 && < 0.14,
                  wxcore >= 0.12 && < 0.14
  other-modules:  
                  Backgammon,
                  Dispatch,
                  DomainTypes,
                  Events,
                  FIBSClient,
                  FIBSClient.Commands,
                  FIBSClient.Messages,
                  FIBSConnector,
                  Model,
                  View,
                  View.Board,
                  View.InvitationList,
                  View.MatchWindow,
                  View.PlayerList,
                  Graphics.UI.WX.Async
  ghc-options:    -rtsopts -threaded -O2

test-suite all-tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: src, test
  main-is:        Test.hs
  build-depends:  
                  array >= 0.4, 
                  base >= 4.5, 
                  containers >= 0.4, 
                  hslogger >= 1.1,
                  network >= 2.3, 
                  HUnit >= 1.2, 
                  old-locale >= 1.0, 
                  QuickCheck >= 2.4, 
                  random >= 1.0, 
                  regex-tdfa >= 1.1,
                  stm >= 2.2,
                  test-framework >= 0.4 && < 0.7, 
                  test-framework-hunit >= 0.2, 
                  test-framework-quickcheck2 >= 0.2, 
                  time >= 1.4
  x-uses-tf:      true
  other-modules:  
                  FIBSClient.Commands, 
                  FIBSClient.Messages, 
                  FIBSClientTests, 
                  Model, 
                  ModelTests
